After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683762 - wrong icon used for nautilus
wrong icon used for nautilus
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-11 02:46 UTC by William Jon McCann
Modified: 2012-10-01 20:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (66.36 KB, image/png)
2012-09-11 02:46 UTC, William Jon McCann
  Details
default-table: add GNOME 3 services icon rewrite rules (2.21 KB, patch)
2012-09-11 19:12 UTC, Cosimo Cecchi
committed Details | Review
pretty-table: don't use libwnck to get application icons (10.10 KB, patch)
2012-09-11 19:12 UTC, Cosimo Cecchi
needs-work Details | Review
pretty-table: don't use libwnck to get application icons (10.12 KB, patch)
2012-09-27 20:46 UTC, Cosimo Cecchi
none Details | Review
pretty-table: prefer GIO to get application icons (6.94 KB, patch)
2012-09-28 16:13 UTC, Cosimo Cecchi
needs-work Details | Review
screenshot (104.68 KB, image/png)
2012-09-28 19:13 UTC, Cosimo Cecchi
  Details
Wrong nautilus icon used (68.04 KB, image/png)
2012-10-01 20:10 UTC, Robert Roth
  Details

Description William Jon McCann 2012-09-11 02:46:38 UTC
Created attachment 223974 [details]
screenshot

The process list is using the wrong icon for nautilus. We should be using the icon found in the desktop file instead.
Comment 1 Cosimo Cecchi 2012-09-11 19:12:27 UTC
Created attachment 224040 [details] [review]
default-table: add GNOME 3 services icon rewrite rules

- add gnome-shell, gnome-panel and dconf-service
- remove a misleading code comment
- use the correct icon name for applets and evolution services
Comment 2 Cosimo Cecchi 2012-09-11 19:12:30 UTC
Created attachment 224041 [details] [review]
pretty-table: don't use libwnck to get application icons

Instead, use Gio::AppInfo. We need to install file monitors in the
application desktop file directories to make sure our cache is up to
date when new applications are installed or upgraded, and we're still
running.

This ensures the icons we use are consistent with those displayed by the
rest of the system.
Comment 3 Robert Roth 2012-09-27 19:29:57 UTC
Review of attachment 224040 [details] [review]:

Looks fine, works fine, accepted.
Comment 4 Robert Roth 2012-09-27 19:39:32 UTC
Review of attachment 224041 [details] [review]:

After applying the patch, I've got the following (without the patch I don't have this):
(gnome-system-monitor:9498): Gtk-CRITICAL **: gtk_icon_theme_lookup_by_gicon: assertion `G_IS_ICON (icon)' failed
Any idea on how to debug it and fix it? I wouldn't want to commit before sorting this CRITICAL out.
Comment 5 Cosimo Cecchi 2012-09-27 20:46:08 UTC
Created attachment 225287 [details] [review]
pretty-table: don't use libwnck to get application icons

--

This should probably fix it, even if I can't reproduce the critical here.
Comment 6 Robert Roth 2012-09-27 21:37:23 UTC
Review of attachment 225287 [details] [review]:

Correct nautilus icon is displayed, Critical is not displayed anymore. Can we be sure that by removing wnck as icon provider we will not have less icons displayed (more default icons shown)?
Comment 7 Cosimo Cecchi 2012-09-27 21:42:44 UTC
I'd also be fine with keeping the wnck provider in, but make the gio one have a higher priority in the list. Do you think that would be an acceptable solution for you?
Comment 8 Cosimo Cecchi 2012-09-27 21:44:04 UTC
To be clear, I did not investigate how wnck gets to that icon, so I don't have a definite answer to your question without digging into the wnck code.
Comment 9 Cosimo Cecchi 2012-09-28 16:13:57 UTC
Created attachment 225344 [details] [review]
pretty-table: prefer GIO to get application icons

---

Keep the Wnck code with a lower priority over GIO.
Comment 10 Cosimo Cecchi 2012-09-28 16:30:31 UTC
libwnck actually does a lot of things to get that icon - it reads the WM icon value from an X property as far as I can see. So for programs that do that but don't install a desktop file, I think it makes sense to keep the Wnck code around - I reworked the patch do to so.
Comment 11 Robert Roth 2012-09-28 18:15:34 UTC
Review of attachment 225344 [details] [review]:

I like the proposed solution, to add a possible retrieval strategy above libwnck (and I have tried moving libwnck down in the stack a bit), but somehow the nautilus icon is still the old one, with this patch applied. What are the minimum requirements? I have the 3.4.2 gnome stack, will try it with the 3.6 stack too.
Comment 12 Cosimo Cecchi 2012-09-28 19:13:08 UTC
Weird, the patch works fine here.
Comment 13 Cosimo Cecchi 2012-09-28 19:13:26 UTC
Created attachment 225354 [details]
screenshot
Comment 14 Robert Roth 2012-10-01 20:10:10 UTC
Created attachment 225533 [details]
Wrong nautilus icon used

OK, my mistake: I did try this on unity, see my screenshot. On other Desktop Environments I see the correct nautilus icon (Gnome Shell crashes for me before logging in, so I have tried Elementary's Pantheon, GNOME classic with and without effects).
Strange, as Ubuntu Quantal uses the 3.6 stack, so gio icon loading should work there too... anyway, the patch seems fine, it should be something to blame on Unity. I guess I will accept the patch and see whether I can find what's wrong with unity. If not, I think most people can live with that icon on Unity.
Comment 15 Robert Roth 2012-10-01 20:15:33 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.