default-table: add GNOME 3 services icon rewrite rules

- add gnome-shell, gnome-panel and dconf-service
- remove a misleading code comment
- use the correct icon name for applets and evolution services

https://bugzilla.gnome.org/show_bug.cgi?id=683762