src/defaulttable.h
@@ -20,30 +20,31 @@ PrettyTableItem(const std::string& a_command, const std::string& a_icon)
 
 #define ITEM PrettyTableItem
 
-/* The current table is only a test */
 static const PrettyTableItem default_table[] = {
+    /* GNOME services */
+    ITEM(".*applet(-?2)?|gnome-panel", "gnome-panel"),
+    ITEM("evolution.*", "emblem-mail"),
+    ITEM("gconfd-2|dconf-service", "preferences-desktop"),
+    ITEM("metacity|gnome-shell", "gnome-window-manager"),
+    ITEM("vino.*", "gnome-remote-desktop"),
+    /* Other processes */
     ITEM("(ba|z|tc|c|k)?sh", "utilities-terminal"),
     ITEM("(k|sys|u)logd|logger", "internet-news-reader"),
     ITEM("X(org)?", "display"),
     ITEM("apache2?|httpd|lighttpd", "internet-web-browser"),
-    ITEM(".*applet(-?2)?", "gnome-applets"),
     ITEM("atd|cron|CRON|ntpd", "date"),
     ITEM("cupsd|lpd?", "printer"),
     ITEM("cvsd|mtn|git|svn", "file-manager"),
     ITEM("emacs(server|\\d+)?", "gnome-emacs"),
-    ITEM("evolution.*", "internet-mail"),
     ITEM("famd|gam_server", "file-manager"),
-    ITEM("gconfd-2", "preferences-desktop"),
     ITEM("getty", "input-keyboard"),
     ITEM("gdb|((gcc|g\\+\\+)(-.*)?)|ar|ld|make", "applications-development"),
-    ITEM("metacity", "gnome-window-manager"),
     ITEM("sendmail|exim\\d?", "internet-mail"),
     ITEM("squid", "proxy"),
     ITEM("ssh(d|-agent)", "ssh-askpass-gnome"),
     ITEM("top|vmstat", "system-monitor"),
     ITEM("vim?", "vim"),
-    ITEM("x?inetd", "internet-web-browser"),
-    ITEM("vino.*", "gnome-remote-desktop")
+    ITEM("x?inetd", "internet-web-browser")
 };
 
 #undef ITEM
